Phase 6: bilingual documentation, config overrides and release prep
- Bilingual guides: INSTALL, USER_GUIDE, DISCORD_SETUP, MUSIC, TTS, TROUBLESHOOTING,
  FAQ, SECURITY, ARCHITECTURE, BUILD and CONTRIBUTING, plus a rewritten README with the
  status, the install table per platform, the first-run walkthrough and the known
  limitations.
- ARCHITECTURE.md rewritten to describe what the code actually is now: layers, the
  threading contract, why the money path is a TransactionTemplate, the engine modes, and
  the packaging flow.
- SECURITY.md documents every secret, every rule that keeps the token out of the
  database, logs and UI, the credential backends, the Discord permissions asked for, and
  the complete list of outbound network activity - including the deliberate decision to
  let yt-dlp fetch its JavaScript solver.
- Optional per-user configuration at <dataDir>/config/application.properties, so settings
  can be overridden without touching the read-only app image.
- CHANGELOG rewritten: it had silently lost Phases 2b and 4-6 because an earlier edit
  consumed a heading and later edits became no-ops. It now lists every phase plus the
  Changed, Fixed and Removed sections, including all nine real bugs found by running the
  software.
- THIRD_PARTY_LICENSES now states exactly what ships in the installers.

Final verification: 215 tests green; the packaged app image passes --self-test with ZERO
warnings (database, translations, OS keychain, bundled voices and engines, voice registry
parsing three voices, and the JDAVE, Opus and Piper natives all loading).